--- a/src/semana-4/Desafio Semana 4/requirements.txt
+++ b/src/semana-4/Desafio Semana 4/requirements.txt
@@ -1,14 +1,21 @@
 ﻿blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.2.2
-Flask==3.0.3
+flask==3.0.3
+idna==3.8
+importlib-metadata==8.4.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
+jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
+requests==2.32.3
 tomli==2.0.1
-Werkzeug==3.0.4
+urllib3==2.2.2
+werkzeug==3.0.4
+zipp==3.20.1
